<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.lmoesle</groupId>
	<artifactId>process-automation-example</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>process-automation-example</name>
	<description>process-automation-example</description>

	<properties>
		<maven.compiler.target>25</maven.compiler.target>
		<maven.compiler.source>25</maven.compiler.source>
		<maven.version>3.9.10</maven.version>
		<java.version>25</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring-boot.version>3.5.7</spring-boot.version>
		<camunda.version>7.24.0</camunda.version>
		<process-engine-adapter-c7-embedded.version>2025.11.1</process-engine-adapter-c7-embedded.version>
		<process-engine-api.version>1.4</process-engine-api.version>
		<process-engine-worker.version>0.7.1</process-engine-worker.version>
		<springdoc.openapi.version>2.8.14</springdoc.openapi.version>
		<camunda.bpm.data.version>2025.12.2</camunda.bpm.data.version>
		<postgresql.version>42.7.9</postgresql.version>
		<flyway.version>11.20.2</flyway.version>
		<lombok.version>1.18.42</lombok.version>
		<bpmn2code.version>0.0.18</bpmn2code.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<!-- Import dependency management from Spring Boot -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.camunda.bpm</groupId>
				<artifactId>camunda-bom</artifactId>
				<version>${camunda.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>

		<!-- Camunda -->
		<dependency>
			<groupId>org.camunda.bpm.springboot</groupId>
			<artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>
		</dependency>
		<dependency>
			<groupId>org.camunda.bpm.springboot</groupId>
			<artifactId>camunda-bpm-spring-boot-starter-rest</artifactId>
		</dependency>
		<dependency>
			<groupId>io.holunda.data</groupId>
			<artifactId>camunda-bpm-data</artifactId>
			<version>${camunda.bpm.data.version}</version>
		</dependency>
		<dependency>
			<groupId>dev.bpm-crafters.process-engine-adapters</groupId>
			<artifactId>process-engine-adapter-camunda-platform-c7-embedded-spring-boot-starter</artifactId>
			<version>${process-engine-adapter-c7-embedded.version}</version>
		</dependency>
		<dependency>
			<groupId>dev.bpm-crafters.process-engine-worker</groupId>
			<artifactId>process-engine-worker-spring-boot-starter</artifactId>
			<version>${process-engine-worker.version}</version>
		</dependency>
		<dependency>
			<groupId>dev.bpm-crafters.process-engine-api</groupId>
			<artifactId>process-engine-api</artifactId>
			<version>${process-engine-api.version}</version>
		</dependency>

		<!-- DB -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>${postgresql.version}</version>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
			<version>${flyway.version}</version>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-database-postgresql</artifactId>
			<version>${flyway.version}</version>
		</dependency>

		<!-- OpenAPI -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>${springdoc.openapi.version}</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.tngtech.archunit</groupId>
			<artifactId>archunit-junit5</artifactId>
			<version>1.4.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.5.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.5.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.4.0</version>
					<configuration>
						<propertiesEncoding>UTF-8</propertiesEncoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.1.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>3.6.2</version>
					<executions>
						<execution>
							<id>enforce-maven</id>
							<goals>
								<goal>enforce</goal>
							</goals>
							<configuration>
								<rules>
									<requireJavaVersion>
										<version>${java.version}</version>
									</requireJavaVersion>
									<requireMavenVersion>
										<version>${maven.version}</version>
									</requireMavenVersion>
								</rules>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.14.1</version>
					<configuration>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<!-- Version muss mit der durch Spring-Boot-Starter bereitgestellten Version übereinstimmen -->
								<version>${lombok.version}</version>
							</path>
							<!-- other annotation processors -->
						</annotationProcessorPaths>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.4</version>
					<configuration>
						<runOrder>random</runOrder>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>3.5.4</version>
					<executions>
						<execution>
							<id>run-itests</id>
							<goals>
								<goal>integration-test</goal>
								<goal>verify</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.6.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.1.4</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.21.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.4.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.21.0</version>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${spring-boot.version}</version>
				</plugin>
				<plugin>
					<groupId>io.github.emaarco</groupId>
					<artifactId>bpmn-to-code-maven</artifactId>
					<version>${bpmn2code.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.github.emaarco</groupId>
				<artifactId>bpmn-to-code-maven</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>generate-bpmn-api</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<baseDir>${project.basedir}</baseDir>
					<filePattern>src/main/resources/bpmn/*.bpmn</filePattern>
					<outputFolderPath>${project.basedir}/src/main/java</outputFolderPath>
					<packagePath>${project.groupId}.processautomationexample.bpmn</packagePath>
					<outputLanguage>JAVA</outputLanguage>
					<processEngine>CAMUNDA_7</processEngine>
					<useVersioning>false</useVersioning>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<licenses>
		<license>
			<name>MIT License</name>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Lukas Mösle</name>
			<organization>Miragon GmbH</organization>
			<url>https://github.com/lmoesle</url>
			<roles>
				<role>initiator</role>
			</roles>
		</developer>
	</developers>
	<scm>
		<url>https://github.com/lmoesle/process-automation-example</url>
		<connection>scm:git:git@github.com:lmoesle/process-automation-example</connection>
		<developerConnection>scm:git:git@github.com:lmoesle/process-automation-example</developerConnection>
		<tag>HEAD</tag>
	</scm>

</project>
